--- a/child-page/contactcss/home1.css
+++ b/child-page/contactcss/home1.css
@@ -85,13 +85,8 @@ body {
     align-items: center;
 }
 .slideImg {
-    background: #ccc;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 50%;
-    min-height: 180px;
-    width: 100%;
-    clip-path: circle(30%);
+    width: 250px;
+    clip-path: circle();
 }
 @media (max-width: 767.98px) { 
 
@@ -102,6 +97,15 @@ body {
     }
     .swiper-button-next {
         right: 0;
+    }
+    .ctnright {
+        width: 100%;
+    }
+    .ctnright {
+        width: 100%;
+    }
+    .ctnright-item {
+        font-size: 40px;
     }
 }
 
