--- a/child-page/cssmain/home.css
+++ b/child-page/cssmain/home.css
@@ -8,11 +8,7 @@
     z-index: 2;
     padding: 10px;
 }
-.hdItem2 {
-    width: 45%;
-}
 .hdItem3 {
-    width: 45%;
     display: flex;
     justify-content: end;
 }
@@ -30,6 +26,7 @@
 }
 .ft-pr {
     background: url('../img/ft1.png');
+    background-size: 100%;
 }
 
 .ft-left>p {
@@ -57,17 +54,14 @@
 
 .ft-right {
     width: 25%;
-    margin-left: 3rem;
 }
 
 .ftMxh {
-    margin: 3rem 0 3rem 3rem;
-    width: 25%;
+    margin: 3rem 0 3rem 0;
 }
 
 .ftItem {
-    margin: 3rem 3rem 3rem 0;
-    width: 50%;
+    margin: 3rem 0 3rem 0;
 }
 @media (max-width: 570px) {
     .ft-left , .hdMenu , .itemdt2 , .ctnItem1 , .hdItem6 , .hdItem7 , .hdItem8{
@@ -75,6 +69,7 @@
     }
     .ft-pr {
         background-position-x: 100%; 
+        background-size: cover;
     }
     .ft-right {
         width: 100% !important;
@@ -83,18 +78,14 @@
         margin: 3rem 0 3rem 0rem;
         width: 40%;
     }
-    .ftItem {
-        margin-right: 0 !important;
-    }
     .headerItem2 {
         padding: 10px;
     }
     .btnPr {
         display: flex !important;
         justify-content: end;
-        width: 92%;
+        width: 50%;
         margin-top: 10px;
-        padding-bottom: 10px;
     }
     .mobiItem > i {
         font-size: 40px;
@@ -108,6 +99,13 @@
     .hdItem5:hover {
         color: red;
     }
+    .hdItem3 {
+        display: none;
+    }
+    .hdItem2 {
+        width: 50%;
+    }
+
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
@@ -116,6 +114,7 @@
     }
     .ft-pr {
         background-position-x: 100%; 
+        background-size: cover;
     }
     .ft-left>span,
     .ft-left {
@@ -133,11 +132,16 @@
     .ft-right {
         width: 100% !important;
     }
+    .ftHeader > img {
+        width: 200px;
+    }
 }
 @media (min-width: 768px) and (max-width: 991px) {
     /* footer */
     .ft-pr {
         background-position-x: 100%;
+        background-size: cover;
+
     }
     .ft-left>p {
         white-space: nowrap;
@@ -165,8 +169,43 @@
         margin-right: 1rem !important;
         margin-left: 1rem !important;
     }
+    .imgItem {
+        width: 250px;
+    }
+    .imgItem2 {
+        width: 30px;
+    }
 }
-
+@media (max-width: 281px) {
+    .btnPr {
+        margin-top :0;
+    }
+    .ftItem , .ftItem2{
+        width: 100%;
+    }
+}
+@media (min-width: 768px) {
+    .ftHeader > img {
+        width: 250px;
+    }
+    .ftItem2 {
+        justify-content: end;
+    }
+}
+@media (min-width: 992px) {
+    .ftHeader > img {
+        width: 300px;
+    }
+    .imgItem {
+        width: 250px;
+    }
+    .imgItem2 {
+        width: 30px;
+    }
+    .ftItem2 {
+        justify-content: end;
+    }
+}
 
 
 
