--- a/flower-store/assets/scss/index.scss
+++ b/flower-store/assets/scss/index.scss
@@ -26,6 +26,13 @@ body {
     .block_header {
         background-color: #c87e6b;
 
+        @include tablet() {
+            padding: 15px 0px 10px;
+        }
+
+        @include desktop() {
+            padding: 30px 0px 25px;
+        }
         .container-fluid {
 
             .navbar-brand {
@@ -50,6 +57,7 @@ body {
                     line-height: 2.048;
                     text-transform: uppercase;
                     margin: auto;
+                    font-weight: bold;
     
                     @include tablet() {
                         font-size: 15px;
@@ -516,18 +524,18 @@ body {
                     width: 100%;
                 }
 
-                // .fa-play-circle {
-                //     position: absolute;
-                //     top: 50%;
-                //     left: 50%;
-                //     transform: translate(-50%, -50%);
-                //     color: #ffffff;
-                //     font-size: 20px;
+                .fa-play-circle {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    color: #ffffff;
+                    font-size: 20px;
 
-                //     @include desktop() {
-                //         font-size: 80px;
-                //     }
-                // }
+                    @include desktop() {
+                        font-size: 80px;
+                    }
+                }
 
                 &::after {
                     content: "";
@@ -681,14 +689,16 @@ body {
 
                         @include tablet() {
                             margin-left: 93px;
+                            margin-top: 30px;
                         }
      
                         @include desktop() {
                             margin-left: 93px;
+                            margin-top: 80px;
                         }
                         
                         .content_pic {
-                            width: 140px;
+                            width: 15%;
                             margin-top: 10px;
                         }
 
@@ -746,7 +756,15 @@ body {
                     background-repeat: no-repeat;
                     background-position: bottom right;
                     background-size: 10%;
-                    padding-bottom: 100px;
+                    padding-bottom: 30px;
+
+                    @include tablet() {
+                        padding-bottom: 130px;
+                    }
+
+                    @include desktop() {
+                        padding-bottom: 130px;
+                    }
 
                     .container {
 
@@ -789,7 +807,15 @@ body {
                     background-repeat: no-repeat;
                     background-position: bottom left;
                     background-size: 10%;
-                    padding-bottom: 130px;
+                    padding-bottom: 30px;
+
+                    @include tablet() {
+                        padding-bottom: 130px;
+                    }
+
+                    @include desktop() {
+                        padding-bottom: 130px;
+                    }
 
                     .container {
 
@@ -853,6 +879,7 @@ body {
     // Subcribe // 
     .block_subscribe {
         padding-bottom: 40px;
+        margin-top: 46px;
 
         .container {
             
