--- a/infor_page/css/infor_page.css
+++ b/infor_page/css/infor_page.css
@@ -286,6 +286,14 @@ li{
     display: flex;
     align-items: center;
 }
+.text-title-sec-3 a{
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+}
+.dropdown-container{
+    cursor: pointer;
+}
 .button-dropdown{
     display: flex;
     align-items: center;
@@ -341,7 +349,6 @@ li{
 }
 @media (max-width: 992px){
     .desc-banner-sec-1{
-        height: 400px;
         justify-content: center;
     }
     /* .heading-col-right-sec-1 {
